# Axe-OS-Multitool

./: .gitignore  ANDROID_SETUP.md  AUTO_TUNE_FIXES.md  Dockerfile  HASHRATE_VERIFICATION.md  MOBILE_FEATURES.md  NATIVE_CONVERSION.md  README.md  ROADMAP.md  TAURI_SETUP.md  bitaxe_benchmark_records.xlsx  docker-compose.yml  miners.json  next.config.ts  package-lock.json  package.json  umbrel-app.yml
.github/workflows/: release.yml
docs/: blueprint.md
scripts/: build-tauri.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: add-miner-dialog.tsx  advanced-chart.tsx  analytics-dialog.tsx  app-updater.tsx  benchmark-history-dialog.tsx  bitcoin-icon.tsx  bulk-actions-bar.tsx  dashboard-controls.tsx  glitch-text.tsx  glitch.tsx  global-stats.tsx  group-manager.tsx  miner-card.tsx  miner-chart.tsx  miner-comparison-chart.tsx  miner-dashboard.tsx  mobile-layout.tsx  particle-network.tsx  profitability-dashboard.tsx  settings-dialog.tsx  share-animation.tsx  tools-menu.tsx  update-banner.tsx
src/hooks/: use-alert-monitor.ts  use-app-settings.ts  use-dashboard-settings.ts  use-global-state.ts  use-local-storage.ts  use-miner-history.ts  use-mobile.ts  use-window-events.ts
src/lib/: alert-settings.ts  asic-presets.ts  backup-utils.ts  benchmark-history.ts  benchmark-profiles.ts  benchmark.ts  crypto-prices.ts  database.ts  default-settings.ts  device-specs.ts  export-utils.ts  firmware-checker.ts  tauri-api.ts  (+2 more)
(+17 files in other folders)
